Update social media links.

--- a/config.toml
+++ b/config.toml
@@ -5,9 +5,36 @@ title = 'Gabriela'
 theme = 'barks'
 
 [params]
-    [params.social]
-        show_social = true
-        email = 'gabrielaiwama@gmail.com'
+    [params.social.email]
+        name = "E-Mail"
+        class = "fas fa-envelope"
+        url = "mailto:gabriela.iwama@student.uni-tuebingen.de"
+        weight = 1
+    [params.social.github]
+        name = "GitHub"
+        class = "fab fa-github"
+        url = "https://github.com/gabrielaiwama"
+        weight = 2
+    [params.social.google_scholar]
+        name = "Google Scholar"
+        class = "ai ai-google-scholar-square"
+        url = "https://scholar.google.com/citations?user=n6yTMLYAAAAJ"
+        weight = 3
+    [params.social.twitter]
+        name = "Twitter"
+        class = "fas fa-twitter-square"
+        url = "https://twitter.com/GabrielaIwama"
+        weight = 3
+    [params.social.orcid]
+        name = "ORCID"
+        class = "fab fa-orcid"
+        url = "https://orcid.org/0000-0002-4043-1230"
+        weight = 3
+    [params.social.linkedin]
+        name = "Linkedin"
+        class = "fab fa-linkedin"
+        url = "https://www.linkedin.com/in/gabrielaiwama/"
+        weight = 3
 
     [params.colors]
         background_color = "Snow"
