--- a/config.toml
+++ b/config.toml
@@ -20,21 +20,26 @@ theme = 'barks'
         class = "ai ai-google-scholar-square"
         url = "https://scholar.google.com/citations?user=n6yTMLYAAAAJ"
         weight = 3
+    [params.social.researchgate]
+        name = "ResearchGate"
+        class = "fab fa-researchgate"
+        url = "https://www.researchgate.net/profile/Gabriela-Iwama"
+        weight = 4
     [params.social.twitter]
         name = "Twitter"
         class = "fab fa-twitter-square"
         url = "https://twitter.com/GabrielaIwama"
-        weight = 4
+        weight = 5
     [params.social.orcid]
         name = "ORCID"
         class = "fab fa-orcid"
         url = "https://orcid.org/0000-0002-4043-1230"
-        weight = 5
+        weight = 6
     [params.social.linkedin]
         name = "Linkedin"
         class = "fab fa-linkedin"
         url = "https://www.linkedin.com/in/gabrielaiwama/"
-        weight = 6
+        weight = 7
 
 
     [params.colors]
